onnx: close composite export and harden static params